[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Entities/Parts/Melee/BasicShockField.gd" type="Script" id=1]
[ext_resource path="res://Shield/Shield_2_real.png" type="Texture" id=2]
[ext_resource path="res://scenes/Entities/Projectiles/basicShock.wav" type="AudioStream" id=3]
[ext_resource path="res://scenes/Entities/Projectiles/DynamicShockArea.tscn" type="PackedScene" id=4]
[ext_resource path="res://Shield/Shield_1.png" type="Texture" id=5]
[ext_resource path="res://Shield/Shield_2.png" type="Texture" id=6]
[ext_resource path="res://Shield/Shield_4.png" type="Texture" id=7]

[sub_resource type="AnimatedTexture" id=1]
flags = 4
frames = 4
fps = 7.0
frame_0/texture = ExtResource( 5 )
frame_1/texture = ExtResource( 2 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 6 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 7 )
frame_3/delay_sec = 0.0

[node name="BasicShockField" type="Node2D"]
script = ExtResource( 1 )
knockback_effect = 4.0

[node name="CockDurationTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ShootNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -3.0

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.999997, 3 )
scale = Vector2( 3.36719, 3.36719 )
texture = SubResource( 1 )
offset = Vector2( 2, 1.33333 )

[node name="BlastArea" parent="Sprite" instance=ExtResource( 4 )]
position = Vector2( 0.296986, -1.7819 )
scale = Vector2( 0.445476, 0.445476 )

[connection signal="timeout" from="CockDurationTimer" to="." method="_on_CockDurationTimer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
